[tool.poetry]
name = "runaway-script"
version = "0.1.0"
description = ""
authors = ["Soof Golan <soofgolan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
madbg = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
